2001-10-18  Ray Tomlinson  <RTomlinson@bbn.com>

	* ComponentData.java (Repository):
	Define HOST constant for identify host ComponentData.

	* PopulateDb.java (Repository):
	Record pre-existing parameters and relationships so new ones can
	be detected and placed in the CSMI assembly rather than the CSHNA
	assembly.
	Handle hosts including host-node mappings.

	* GenericComponentData.java (Repository): 
	* ComponentData.java (Repository): 
	* AgentAssetData.java (Repository):
	Add getters for things have setters and indexes (parameters,
	relationships, etc.).

2001-10-17  Ray Tomlinson  <RTomlinson@bbn.com>

	* PopulateDb.java (Repository):
	Avoid duplicate relationships. Fix :cmt_type: substitution.

2001-10-16  Ray Tomlinson  <RTomlinson@bbn.com>

	* TestPopulateDb.java (Repository):
	Many revisions to adapt to new API of PopulateDb. Mostly concerned
	with distinguishing CMT, CSMART, and CSM assemblies.

	* Experiment.java (Repository):
	Add saveToDB function that writes additional assemblies to the
	database for the host-node-agent assigments, metrics, and impacts.

	* PopulateDb.java (Repository):
	Many modifications to treat CMT, CSMART, and CSM assemblies
	separately. Added experiment/trial cloning and cleaning.

2001-10-12  Ray Tomlinson  <RTomlinson@HEFEWEIZEN>

	* PopulateDb.java (Repository):
	Use alib id from ComponentData when available. Clean out other CSM
	assemblies from the current trial before populating with new
	condiments.

2001-10-11  Ray Tomlinson  <RTomlinson@HEFEWEIZEN>

	* PopulateDb.java (Repository):
	New class populates the config database from a ComponentData
	structure.

	* ComponentData.java (Repository):
	Change Cluster to agent. Change capitalization to all lower case
	to match the capitalization used in the database.

2001-09-26  Ray Tomlinson  <RTomlinson@bbn.com>

	* PropertyEvent.java (Repository): 
	* Property.java (Repository): 
	* ConfigurableComponent.java (Repository):