@@ -1,3 +1,13 @@
+2001-10-19  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* PopulateDb.java (Repository):
+	Fix clone-cleaning code. Changed to remove all csmi and hna type
+	assemblies.
+	(Repository):
+	Write component parameters whenever the component is added, not
+	just when the lib component is added. Duhhh.
+	Properly quote strings containing quotes by doubling them.
+
 2001-10-18  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* ComponentData.java (Repository):
